# StageBridge

./: Cargo.toml
examples/: dmx.rs  e131.rs  launch_control_xl.rs  launchpad.rs  launchpad_x.rs  list.rs
examples/lights/: beatgrid.rs  context.rs  lights.rs  main.rs  snake.rs  state.rs
examples/lights/fx/: bounce.rs  chase.rs  manual.rs  mod.rs  saw.rs  solid.rs  strobe.rs
examples/lights/pipeline/: filter.rs  map.rs  mod.rs  time.rs
examples/lights/pipeline/light/: shape.rs
examples/lights/pipeline/logic/: active_toggle.rs  beat_indicator.rs  color_select.rs  div_select.rs  mod.rs  palette_switcher.rs  pause_enable.rs
src/: color.rs  e131.rs  lib.rs  osc.rs
src/color/: mod.rs  rgb.rs
src/dmx/: mod.rs
src/dmx/device/: bar_rgb_18w.rs  beam_rgbw_60w.rs  laser_scan_30w.rs  mod.rs  par_rgbw_12x3w.rs  spider_rgbw_8x10w.rs  strobe_rgb_35w.rs
src/e131/: mod.rs
src/midi/: mod.rs
src/midi/device/: mod.rs  worlde_easycontrol9.rs
src/midi/device/launch_control_xl/: mod.rs  types.rs
src/midi/device/launchpad_x/: ext.rs  mod.rs  pipeline.rs
src/midi/device/launchpad_x/types/: color.rs  mod.rs  time.rs
src/num/: interp.rs  mod.rs  num.rs  range.rs
src/osc/: mod.rs
src/util/: ease.rs  future.rs  macros.rs  mod.rs  pipeline copy 2.rs  pipeline copy.rs  pipeline.rs
