[package]
name = "stagebridge"
version = "0.1.0"
edition = "2021"

[features]
default = ["osc", "midi", "e131", "dmx"]
midi = ["midir"]
osc = ["rosc"]
e131 = ["sacn-unofficial"]
dmx = []

[dependencies]
log = "0.4"
eyre = "0.6"

midir = { version = "0.7", optional = true }
rosc = { version = "0.5", optional = true }
sacn-unofficial = { version = "0.9", optional = true }

rand = "0.8"
