[package]
name = "stagebridge"
version = "0.1.0"
edition = "2021"

[features]
default = ["osc", "midi", "e131", "dmx"]
midi = ["dep:midir"]
osc = ["dep:rosc"]
e131 = ["dep:sacn-unofficial"]
dmx = []

[dependencies]
anyhow = "1"
log = "0.4"
rand = "0.8"

midir = { version = "0.7", optional = true }
rosc = { version = "0.5", optional = true }
sacn-unofficial = { version = "0.9", optional = true }
serde = { version = "1", optional = true }

